--- a/.github/workflows/daily_push.yml
+++ b/.github/workflows/daily_push.yml
@@ -96,7 +96,8 @@ jobs:
           #### 📝 今日待办
           1.  处理日常工作事项
           2.  下班顺路取快递
-          3.  睡前阅读30分钟
+          3.  晚上十一点半之前睡觉
+          4.  淘宝打卡签到
           
           [今日热点](https://news.163.com/)
           "
