--- a/.github/workflows/daily_push.yml
+++ b/.github/workflows/daily_push.yml
@@ -102,6 +102,7 @@ jobs:
           2.  下班顺路取快递
           3.  晚上十一点半之前睡觉
           4.  淘宝打卡签到
+          5.  招商银行卡取卡
           
           [今日热点](https://news.163.com/)
           "
